# knowledge-navigator

./: .gitignore  ARCHITECTURE.md  README.md  TOOLS.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: eval-results.md
src/agent/: rag_agent.py
src/dal/: __init__.py
src/tools/: retrieval_tool.py
src/ui/: app.py
tests/: test_rag_agent.py
